# kick-rust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: README.md
examples/: minimal.rs  simple_chat.rs  timeout_example.rs
examples/debug/: README.md  chatroom_id_test.rs
src/: fetch_client.rs  lib.rs  message_parser.rs  types.rs  websocket_manager.rs
src/fetch/: client.rs  mod.rs  parsers.rs  strategies.rs  types.rs
src/fetch/useragent/: mod.rs
tests/: integration_tests.rs
