[package]
name = "kick-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple Rust library for Kick.com WebSocket chat"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/kick-rust"
keywords = ["kick", "websocket", "chat"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.0"
regex = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.0"
rand = "0.8"
async-trait = "0.1"
flate2 = "1.0"
brotli = "3.0"
curl = "0.4"

[dev-dependencies]
tokio-test = "0.4"
