[package]
name = "kick-rust"
version = "0.1.0"
edition = "2021"
authors = ["nglmercer <nglmercer@gmail.com>"]
description = "A Rust library for interacting with Kick.com WebSocket chat and API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nglmercer/kick-rust"
homepage = "https://github.com/nglmercer/kick-rust"
documentation = "https://docs.rs/kick-rust"
readme = "README.md"
keywords = ["kick", "websocket", "chat", "streaming", "api"]
categories = ["api-bindings", "web-programming::websocket", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
url = "2.0"
regex = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.0"
rand = "0.8"
async-trait = "0.1"
flate2 = "1.0"
brotli = "3.0"
curl = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["tracing-subscriber"]
full = ["tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
